Add title and style it

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Beep Boop Translator</title>
   </head>
   <body>
+    <h1>BEEP BOOP</h1>
     <div class="container">
       <form id="formOne">
         <input id="input" type="number">
